Backport Java 17 test compatibility changes.
Avoid usage of encapsulated tests as dummies. Add dependency override for ASM dependencies.

See #2423